<resources>
    <!--  General -->
    <string name="app_name">TV Series</string>
    <string name="back">Voltar</string>

    <!-- UIHome -->
    <string name="home_wallpaper">Imagem da série</string>
    <string name="home_search">Buscar</string>
    <string name="home_item_rating">Avaliação média</string>

    <!-- UIShowDetails -->
    <string name="show_details_schedule">PROGRAMAÇÃO</string>
    <string name="show_details_episodes">EPSÓDIOS</string>
    <string name="show_details_summary">RESUMO</string>
    <string name="show_details_season">%sª Temporada</string>
    <string name="show_details_episode">EP %s</string>
    <string name="show_details_share">Compartilhar série</string>

    <!-- UIEpisodeDetails -->
    <string name="episode_details_season_label">TEMPORADA</string>
    <string name="episode_details_summary">RESUMO</string>
    <string name="episode_details_season">%sª Temporada</string>
    <string name="episode_details_episode">EP %s</string>
    <string name="episode_details_share">Compartilhar episódio</string>

    <!-- UIEpisodeDetails -->
    <string name="deep_link">Deep Link</string>
</resources>